tests/ui/fail/derive-enum.rs
use type_at::TypeAt;

#[derive(TypeAt)]
pub enum Enum {}

fn main() {}
