tests/ui/fail/derive-enum.stderr
error: TypeAt derive only works on struct types.
 --> tests/ui/fail/derive-enum.rs:3:10
  |
3 | #[derive(TypeAt)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `TypeAt` (in Nightly builds, run with -Z macro-backtrace for more info)
